CRIF: Cos'è e Come Funziona.html

--- a/CRIF: Cos'è e Come Funziona.html
+++ b/CRIF: Cos'è e Come Funziona.html
@@ -331,9 +331,9 @@
         <h1>CRIF: Cos'è, Come Funziona e Tutto Quello che Devi Sapere nel 2025</h1>
         
         <div class="meta-info">
-            <strong>Autore:</strong> Manus AI | 
+            <strong>Autore:</strong> CancellaSegnalazione.com | 
             <strong>Data pubblicazione:</strong> 13 Agosto 2025 | 
-            <strong>Tempo di lettura:</strong> 34 minuti | 
+            <strong>Tempo di lettura:</strong> 34 minuti circa | 
             <strong>Parole:</strong> 8.500+
         </div>
     </header>
