--- a/crif-cos-e-come-funziona.html
+++ b/crif-cos-e-come-funziona.html
@@ -144,19 +144,19 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "https://tuosito.com"
+          "item": "https://cancellasegnalazione.com"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "Finanza",
-          "item": "https://tuosito.com/finanza"
+          "item": "https://cancellasegnalazione.com/finanza"
         },
         {
           "@type": "ListItem",
           "position": 3,
           "name": "CRIF: Cos'è e Come Funziona",
-          "item": "https://tuosito.com/crif-cos-e-come-funziona"
+          "item": "https://cancellasegnalazione.com/crif-cos-e-come-funziona"
         }
       ]
     }
