crif-cos-e-come-funziona.html

--- a/crif-cos-e-come-funziona.html
+++ b/crif-cos-e-come-funziona.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="CRIF, cos'è il CRIF, come funziona CRIF, segnalazioni CRIF, centrale rischi, cattivo pagatore, credit scoring, sistema creditizio italiano">
     <meta name="author" content="Cancella Segnalazione.com">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://cancellasegnalazione.com/">
+    <link rel="canonical" href="https://cancellasegnalazione.com/crif-cos-e-come-funziona">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="CRIF: La Guida Completa - Cos'è e Come Funziona">
