--- a/visure-centrali-rischi.html
+++ b/visure-centrali-rischi.html
@@ -17,8 +17,8 @@
   <meta property="og:title" content="Visura Centrale Rischi: Cos’è, Come Richiederla e Differenze con CRIF">
   <meta property="og:description" content="Guida completa alla Visura Centrale Rischi: come funziona, differenze con CRIF, tempi di cancellazione segnalazioni e come agire.">
   <meta property="og:type" content="article">
-  <meta property="og:url" content="https://tuodominio.it/visura-centrale-rischi">
-  <meta property="og:image" content="https://tuodominio.it/img/visura-centrale-rischi.jpg">
+  <meta property="og:url" content="https://cancellasegnalazione.com/visura-centrale-rischi">
+  <meta property="og:image" content="https://cancellasegnalazione.com/img/visura-centrale-rischi.jpg">
   
   <!-- Schema.org JSON-LD -->
   <script type="application/ld+json">
@@ -41,7 +41,7 @@
     },
     "mainEntityOfPage": {
       "@type": "WebPage",
-      "@id": "https://tuodominio.it/visura-centrale-rischi"
+      "@id": "https://cancellasegnalazione.com/visura-centrale-rischi"
     },
     "datePublished": "2025-08-14",
     "dateModified": "2025-08-14"
