visure-centrali-rischi.html

--- a/visure-centrali-rischi.html
+++ b/visure-centrali-rischi.html
@@ -135,6 +135,12 @@
     Contatta su WhatsApp
   </a>
 </div>
-
+<!-- Footer Start -->
+    <footer style="background-color: #000; color: #fff; text-align: center; padding: 15px 10px; font-family: Arial, sans-serif; font-size: 14px;">
+        <p style="margin: 0;">
+            &copy; 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260 - Tutti i diritti riservati.
+        </p>
+    </footer>
+    <!-- Footer End -->
 </body>
 </html>
