--- a/visure-centrali-rischi.html
+++ b/visure-centrali-rischi.html
@@ -136,11 +136,12 @@
   </a>
 </div>
 <!-- Footer Start -->
-    <footer style="background-color: #000; color: #fff; text-align: center; padding: 15px 10px; font-family: Arial, sans-serif; font-size: 14px;">
-        <p style="margin: 0;">
-            &copy; 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260 - Tutti i diritti riservati.
-        </p>
-    </footer>
+    <footer style="background-color: #000; color: #fff; text-align: center; padding: 15px 10px; font-family: Arial, sans-serif; font-size: 14px; margin-top: 30px;">
+    <p style="margin: 0;">
+        &copy; 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260 - Tutti i diritti riservati.
+    </p>
+</footer>
+
     <!-- Footer End -->
 </body>
 </html>
