--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
 <body>
 
     <header>
-        Cancella Segnalazione
+       <header style="background-color: black; padding: 10px; display: flex; align-items: center;">
+    <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF" style="height: 50px; margin-right: 15px;">
+    <h1 style="color: white; margin: 0;">Cancella Segnalazione</h1>
+</header>
     </header>
 
     <section class="hero">
