--- a/index.html
+++ b/index.html
@@ -203,9 +203,10 @@
         </a>
     </div>
 
-    <footer>
-        &copy; 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260 - Tutti i diritti riservati.
-    </footer>
+    <footer style="background-color: black; color: white; padding: 15px; text-align: center;">
+    <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF" style="height: 40px; display: block; margin: 0 auto 10px;">
+    <p>© 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260 - Tutti i diritti riservati.</p>
+</footer>
 
 </body>
 </html>
