--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@
 </head>
 <body>
 
-    <header>
-       <header style="background-color: black; padding: 10px; display: flex; align-items: center;">
-    <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF" style="height: 50px; margin-right: 15px;">
+    <header style="background-color: black; padding: 10px; display: flex; align-items: center;">
+    <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" 
+         alt="Cancella Segnalazione CRIF" 
+         style="height: 50px; margin-right: 15px;">
     <h1 style="color: white; margin: 0;">Cancella Segnalazione</h1>
 </header>
-    </header>
+
 
     <section class="hero">
         <h1>Soluzioni per cancellare segnalazioni in CRIF</h1>
@@ -203,10 +204,13 @@
         </a>
     </div>
 
-    <footer style="background-color: black; color: white; padding: 15px; text-align: center;">
-    <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF" style="height: 40px; display: block; margin: 0 auto 10px;">
-    <p>© 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260 - Tutti i diritti riservati.</p>
+    <footer>
+    <div class="footer-logo">
+        <a href="/">
+            <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF" width="150" height="auto">
+        </a>
+    </div>
+    <!-- resto contenuto footer -->
 </footer>
-
 </body>
 </html>
