--- a/index.html
+++ b/index.html
@@ -205,12 +205,8 @@
     </div>
 
     <footer>
-    <div class="footer-logo">
-        <a href="/">
-            <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF" width="150" height="auto">
-        </a>
-    </div>
-    <!-- resto contenuto footer -->
+  <img src="crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione">
+  <p>© 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls – P. IVA 05282450260 – Tutti i diritti riservati.</p>
 </footer>
 </body>
 </html>
