visure-centrali-rischi.html

--- a/visure-centrali-rischi.html
+++ b/visure-centrali-rischi.html
@@ -1,147 +1,164 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- SEO Title -->
-  <title>Visura Centrale Rischi: Cos’è, Come Richiederla e Differenze con CRIF</title>
-  
-  <!-- Meta Description -->
-  <meta name="description" content="Scopri cos’è la Visura Centrale Rischi, come richiederla gratis, differenze con CRIF ed Experian e come cancellare segnalazioni negative.">
-  
-  <!-- Keywords -->
-  <meta name="keywords" content="visura centrale rischi, visura crif, differenza crif banca d’italia, segnalazione crif, cancellare segnalazione, visura experian, visura ctc, visura protesti, visura cai, tempi cancellazione crif">
-  
-  <!-- Open Graph -->
-  <meta property="og:title" content="Visura Centrale Rischi: Cos’è, Come Richiederla e Differenze con CRIF">
-  <meta property="og:description" content="Guida completa alla Visura Centrale Rischi: come funziona, differenze con CRIF, tempi di cancellazione segnalazioni e come agire.">
-  <meta property="og:type" content="article">
-  <meta property="og:url" content="https://cancellasegnalazione.com/visura-centrale-rischi">
-  <meta property="og:image" content="https://cancellasegnalazione.com/img/visura-centrale-rischi.jpg">
-  
-  <!-- Schema.org JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "Visura Centrale Rischi: Cos’è, Come Richiederla e Differenze con CRIF",
-    "description": "Scopri cos’è la Visura Centrale Rischi, come richiederla gratuitamente, differenze con CRIF ed Experian e come cancellare segnalazioni negative.",
-    "author": {
-      "@type": "Organization",
-      "name": "Cancella Segnalazione"
-    },
-    "publisher": {
-      "@type": "Organization",
-      "name": "Cancella Segnalazione",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://tuodominio.it/logo.png"
-      }
-    },
-    "mainEntityOfPage": {
-      "@type": "WebPage",
-      "@id": "https://cancellasegnalazione.com/visura-centrale-rischi"
-    },
-    "datePublished": "2025-08-14",
-    "dateModified": "2025-08-14"
-  }
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Visure Centrali Rischi - Cancella Segnalazione CRIF</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Header */
+        header {
+            background-color: #000;
+            padding: 10px 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        header img {
+            height: 50px;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
 
-  <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; max-width: 900px; margin: auto; padding: 20px; }
-    h1, h2, h3 { color: #1a1a1a; }
-    a.whatsapp-btn {
-      background-color: #25D366; 
-      color: white; 
-      padding: 15px 20px; 
-      text-decoration: none; 
-      font-size: 18px; 
-      border-radius: 8px; 
-      display: inline-flex; 
-      align-items: center; 
-      gap: 10px;
-    }
-    a.whatsapp-btn img { width: 24px; height: 24px; }
-    a.whatsapp-btn:hover { background-color: #1ebe5d; }
-  </style>
+        /* Widget contenitore */
+        .widget-container {
+            max-width: 1100px;
+            margin: 40px auto;
+            padding: 30px;
+            background: #fff;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+
+        /* Footer */
+        footer {
+            background-color: #000;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+        footer img {
+            height: 50px;
+            margin-bottom: 10px;
+        }
+        footer a {
+            color: white;
+            margin: 0 10px;
+            text-decoration: none;
+        }
+
+        /* Banner GDPR */
+        #cookie-banner {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background: #fff;
+            border-top: 2px solid #000;
+            padding: 15px;
+            text-align: center;
+            font-size: 14px;
+            z-index: 9999;
+        }
+        #cookie-banner button {
+            background: #000;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            margin: 5px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        #cookie-preferences {
+            display: none;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>Visura Centrale Rischi: guida completa per capire e agire</h1>
+<!-- HEADER -->
+<header>
+    <div class="logo">
+        <a href="/">
+            <img src="/assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Cancella Segnalazione CRIF">
+        </a>
+    </div>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/chi-siamo">Chi Siamo</a>
+        <a href="/servizi">Servizi</a>
+        <a href="/blog">Blog</a>
+    </nav>
+</header>
 
-<h2>Cosa sono le Centrali Rischi?</h2>
-<p>Le <strong>Centrali Rischi</strong> sono database che raccolgono informazioni sulla tua affidabilità creditizia, accessibili a banche e finanziarie. Esistono due tipologie:</p>
-<ul>
-  <li><strong>Pubbliche</strong>: come la <strong>Centrale Rischi Banca d’Italia</strong>, nata nel 1962.</li>
-  <li><strong>Private</strong>: come <strong>CRIF</strong>, <strong>CTC</strong> ed <strong>Experian</strong>.</li>
-</ul>
+<!-- CONTENUTO -->
+<div class="widget-container">
+    <h1>Visure Centrali Rischi</h1>
+    <p>In questa pagina troverai tutte le informazioni utili per richiedere e interpretare la tua visura nelle centrali rischi come CRIF, Experian, CTC e Banca d'Italia. Il nostro obiettivo è aiutarti a capire lo stato della tua posizione creditizia e a intervenire per migliorarlo.</p>
 
-<h2>Perché le banche rifiutano un finanziamento?</h2>
-<ol>
-  <li>Reddito insufficiente o non dimostrabile.</li>
-  <li>Troppi debiti o finanziamenti in corso.</li>
-  <li>Segnalazioni negative in una o più centrali rischi.</li>
-</ol>
+    <h2>Cos'è la Visura nelle Centrali Rischi?</h2>
+    <p>La visura è un documento ufficiale che contiene tutte le informazioni registrate sul tuo profilo creditizio. Questo documento è fondamentale per capire come le banche e le finanziarie vedono la tua affidabilità.</p>
 
-<h2>Cos’è una Visura Centrale Rischi?</h2>
-<p>È un documento che riporta eventuali segnalazioni o iscrizioni a tuo nome, presenti nei principali archivi creditizi. Serve a controllare la tua situazione finanziaria e a tutelare banche e creditori.</p>
+    <h2>Come possiamo aiutarti</h2>
+    <ul>
+        <li>Richiesta visura aggiornata da tutte le centrali rischi</li>
+        <li>Analisi completa della tua situazione creditizia</li>
+        <li>Consulenza per migliorare il tuo punteggio e cancellare segnalazioni errate</li>
+    </ul>
 
-<h2>Differenza tra Visura CRIF e Visura Centrale Rischi Banca d’Italia</h2>
-<h3>Visura CRIF® (privata):</h3>
-<ul>
-  <li>Riporta anche ritardi su piccoli importi.</li>
-  <li>Mostra richieste di prestito, finanziamenti attivi, regolarità pagamenti, fidi e carte di credito.</li>
-</ul>
-<h3>Centrale Rischi Banca d’Italia (pubblica):</h3>
-<ul>
-  <li>Registra solo esposizioni sopra i <strong>30.000€</strong>.</li>
-</ul>
-
-<h2>Costo Visura Centrale Rischi Banca d’Italia</h2>
-<p>Richiedibile <strong>gratis</strong> online o presso le filiali della Banca d’Italia.</p>
-
-<h2>Cos’è una Visura CRIF?</h2>
-<p>Contiene i dati presenti in <strong>EURISC</strong>: insoluti, ritardi, affidamenti e aperture di credito. Il rilascio è a pagamento e i tempi di consegna sono di circa <strong>10 giorni lavorativi</strong> se la pratica è completa.</p>
-
-<h2>Richiesta per conto di terzi</h2>
-<p>Puoi richiedere la visura CRIF di un’altra persona solo con:</p>
-<ul>
-  <li>Documento di identità e codice fiscale</li>
-  <li>Eventuale delega firmata</li>
-</ul>
-
-<h2>Cos’è una Visura Experian?</h2>
-<p>Mostra dati creditizi su carte di credito, mutui, prestiti, contratti di utenze, leasing e assicurazioni.</p>
-
-<h2>Cos’è una Visura CTC?</h2>
-<p>Archivio con informazioni su fidi, anticipi fatture, mutui, prestiti e carte di credito.</p>
-
-<h2>A cosa serve la Visura Protesti?</h2>
-<p>Documento della Camera di Commercio che indica protesti su assegni o cambiali. Scadono automaticamente dopo 5 anni.</p>
-
-<h2>Cos’è la Visura CAI?</h2>
-<p>Archivio che segnala assegni e carte revocati per uso irregolare. Serve a prevenire frodi e abusi.</p>
-
-<h2>Dopo quanto tempo si viene cancellati dal CRIF?</h2>
-<p>Entro massimo <strong>5 anni</strong> dalla data di estinzione del prestito. Se la segnalazione rimane oltre il termine, bisogna richiedere la cancellazione, meglio se tramite esperti.</p>
-
-<h2>Cosa fare se CRIF non cancella la segnalazione?</h2>
-<p>CRIF non può eliminare dati senza il via libera della banca segnalante. Un’agenzia specializzata può intervenire per richiederne la rimozione.</p>
-
-<div style="margin-top:20px; text-align:center;">
-  <a class="whatsapp-btn" href="https://wa.me/363520020306?text=Ciao,%20vorrei%20ricevere%20maggiori%20informazioni%20per%20il%20mio%20stato%20creditizio">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-    Contatta su WhatsApp
-  </a>
+    <p>Per maggiori informazioni, contattaci al Numero Verde <strong>800 422 202</strong>.</p>
 </div>
-<!-- Footer Start -->
-    <footer style="background-color: #000; color: #fff; text-align: center; padding: 15px 10px; font-family: Arial, sans-serif; font-size: 14px; margin-top: 30px;">
-    <p style="margin: 0;">
-        &copy; 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260 - Tutti i diritti riservati.
+
+<!-- FOOTER -->
+<footer>
+    <img src="/assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Footer">
+    <p>© 2025 QUINTA DIMENSIONE srls</p>
+    <p>
+        <a href="/contatti">Contatti</a> |
+        <a href="/privacy-policy">Privacy Policy</a> |
+        <a href="/termini-condizioni">Termini e Condizioni</a>
     </p>
+    <p>Via Padania Industriale 1, 31027 Spresiano (TV) - P. IVA e C.F. 05282450260</p>
+    <p>Telefono e WhatsApp: +39 352 002 0306 - Numero Verde: 800 422 202</p>
 </footer>
 
-    <!-- Footer End -->
+<!-- COOKIE BANNER -->
+<div id="cookie-banner">
+    Utilizziamo cookie per migliorare la tua esperienza. Puoi accettare, rifiutare o personalizzare le preferenze in base alle normative GDPR.
+    <br>
+    <button onclick="acceptAllCookies()">ACCETTO</button>
+    <button onclick="rejectAllCookies()">RIFIUTO</button>
+    <button onclick="togglePreferences()">ACCETTO SELEZIONATI</button>
+
+    <div id="cookie-preferences">
+        <h4>Preferenze Cookie</h4>
+        <label><input type="checkbox" checked disabled> Necessari (sempre attivi)</label><br>
+        <label><input type="checkbox" id="statsCookies"> Statistiche</label><br>
+        <label><input type="checkbox" id="marketingCookies"> Marketing</label><br>
+        <button onclick="savePreferences()">Salva Preferenze</button>
+    </div>
+</div>
+
+<script>
+function acceptAllCookies() {
+    document.getElementById('cookie-banner').style.display = 'none';
+}
+function rejectAllCookies() {
+    document.getElementById('cookie-banner').style.display = 'none';
+}
+function togglePreferences() {
+    let prefs = document.getElementById('cookie-preferences');
+    prefs.style.display = prefs.style.display === 'block' ? 'none' : 'block';
+}
+function savePreferences() {
+    document.getElementById('cookie-banner').style.display = 'none';
+}
+</script>
+
 </body>
 </html>
