--- a/visure-centrali-rischi.html
+++ b/visure-centrali-rischi.html
@@ -1,164 +1,275 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visure Centrali Rischi - Cancella Segnalazione CRIF</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Header */
-        header {
-            background-color: #000;
-            padding: 10px 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        header img {
-            height: 50px;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        /* Widget contenitore */
-        .widget-container {
-            max-width: 1100px;
-            margin: 40px auto;
-            padding: 30px;
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-        }
+  <!-- SEO Title -->
+  <title>Visura Centrale Rischi: Cos’è, Come Richiederla e Differenze con CRIF</title>
 
-        /* Footer */
-        footer {
-            background-color: #000;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-        footer img {
-            height: 50px;
-            margin-bottom: 10px;
-        }
-        footer a {
-            color: white;
-            margin: 0 10px;
-            text-decoration: none;
-        }
+  <!-- Meta Description -->
+  <meta name="description" content="Scopri cos’è la Visura Centrale Rischi, come richiederla gratis, differenze con CRIF ed Experian e come cancellare segnalazioni negative.">
 
-        /* Banner GDPR */
-        #cookie-banner {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background: #fff;
-            border-top: 2px solid #000;
-            padding: 15px;
-            text-align: center;
-            font-size: 14px;
-            z-index: 9999;
-        }
-        #cookie-banner button {
-            background: #000;
-            color: #fff;
-            border: none;
-            padding: 8px 15px;
-            margin: 5px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-        #cookie-preferences {
-            display: none;
-            margin-top: 10px;
-        }
-    </style>
+  <!-- Keywords -->
+  <meta name="keywords" content="visura centrale rischi, visura crif, differenza crif banca d’italia, segnalazione crif, cancellare segnalazione, visura experian, visura ctc, visura protesti, visura cai, tempi cancellazione crif">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Visura Centrale Rischi: Cos’è, Come Richiederla e Differenze con CRIF">
+  <meta property="og:description" content="Guida completa alla Visura Centrale Rischi: come funziona, differenze con CRIF, tempi di cancellazione segnalazioni e come agire.">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://cancellasegnalazione.com/visure-centrali-rischi">
+  <meta property="og:image" content="https://cancellasegnalazione.com/crif/assets/images/og-visure-centrali-rischi.jpg">
+
+  <!-- Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": "Visura Centrale Rischi: Cos’è, Come Richiederla e Differenze con CRIF",
+    "description": "Scopri cos’è la Visura Centrale Rischi, come richiederla gratuitamente, differenze con CRIF ed Experian e come cancellare segnalazioni negative.",
+    "author": {
+      "@type": "Organization",
+      "name": "Cancella Segnalazione"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "Cancella Segnalazione",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://cancellasegnalazione.com/crif/assets/images/logo-cancella-segnalazione-crif.png"
+      }
+    },
+    "mainEntityOfPage": {
+      "@type": "WebPage",
+      "@id": "https://cancellasegnalazione.com/visure-centrali-rischi"
+    },
+    "datePublished": "2025-08-14",
+    "dateModified": "2025-08-14"
+  }
+  </script>
+
+  <style>
+    :root{
+      --black:#000;
+      --text:#1a1a1a;
+      --muted:#333;
+      --border:#ddd;
+      --whatsapp:#25D366;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#fff;color:var(--muted)}
+    /* Header */
+    header{
+      background:var(--black);
+      padding:10px 16px;
+      display:flex;
+      align-items:center;
+      gap:12px;
+    }
+    header img{height:50px;display:block}
+    header h1{
+      color:#fff;margin:0;font-size:22px;letter-spacing:.2px;font-weight:700
+    }
+    /* Container widget */
+    .container{
+      max-width:900px;margin:32px auto;padding:28px;background:#fff;
+      border:1px solid var(--border);border-radius:10px;
+      box-shadow:0 2px 10px rgba(0,0,0,.05)
+    }
+    .container h1,.container h2,.container h3{color:var(--text)}
+    .container h1{font-size:28px;margin-top:0}
+    .container h2{margin-top:26px}
+    /* WhatsApp CTA */
+    .cta{
+      text-align:center;margin:30px 0 56px;
+    }
+    .whatsapp-btn{
+      background:var(--whatsapp);color:#fff;padding:14px 20px;border-radius:8px;
+      text-decoration:none;font-size:18px;display:inline-flex;align-items:center;gap:10px;
+    }
+    .whatsapp-btn img{width:24px;height:24px}
+    .whatsapp-btn:hover{filter:brightness(.95)}
+    /* Footer */
+    footer{
+      background:var(--black);color:#fff;padding:20px 16px;
+    }
+    .footer-inner{
+      max-width:1100px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;gap:16px;flex-wrap:wrap;
+    }
+    .footer-brand{display:flex;align-items:center;gap:12px}
+    footer img{height:50px;display:block}
+    footer a{color:#fff;text-decoration:none;margin:0 8px}
+    footer a:hover{text-decoration:underline}
+    .copyright{font-size:14px;margin:4px 0 0}
+    /* Cookie banner (pulsanti neri) */
+    #cookie-banner{
+      position:fixed;left:50%;bottom:24px;transform:translateX(-50%);
+      width:92%;max-width:680px;background:#fff;border:1px solid var(--border);
+      box-shadow:0 10px 30px rgba(0,0,0,.18);border-radius:12px;z-index:9999;display:none;padding:18px;
+      color:var(--muted)
+    }
+    #cookie-banner p{margin:0 0 12px;font-size:14px}
+    .cookie-actions{display:flex;gap:10px;flex-wrap:wrap}
+    .cookie-btn{
+      background:#000;color:#fff;border:none;border-radius:8px;cursor:pointer;
+      padding:10px 14px;font-weight:700
+    }
+    .cookie-btn:hover{background:#222}
+    .prefs{margin-top:12px;background:#f7f7f7;border:1px solid var(--border);border-radius:8px;padding:12px}
+    .prefs h4{margin:0 0 8px;color:var(--text)}
+    .prefs label{display:block;margin:6px 0}
+  </style>
 </head>
 <body>
 
-<!-- HEADER -->
-<header>
-    <div class="logo">
-        <a href="/">
-            <img src="/assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Cancella Segnalazione CRIF">
-        </a>
-    </div>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/chi-siamo">Chi Siamo</a>
-        <a href="/servizi">Servizi</a>
-        <a href="/blog">Blog</a>
-    </nav>
-</header>
+  <!-- HEADER -->
+  <header>
+    <a href="/" aria-label="Home">
+      <img src="/crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF">
+    </a>
+    <h1>Cancella Segnalazione</h1>
+  </header>
 
-<!-- CONTENUTO -->
-<div class="widget-container">
-    <h1>Visure Centrali Rischi</h1>
-    <p>In questa pagina troverai tutte le informazioni utili per richiedere e interpretare la tua visura nelle centrali rischi come CRIF, Experian, CTC e Banca d'Italia. Il nostro obiettivo è aiutarti a capire lo stato della tua posizione creditizia e a intervenire per migliorarlo.</p>
+  <!-- CONTENUTO (widget bianco con bordo) -->
+  <main class="container">
+    <!-- ======= TESTO ARTICOLO (TUO CONTENUTO) ======= -->
+    <h1>Visura Centrale Rischi: guida completa per capire e agire</h1>
 
-    <h2>Cos'è la Visura nelle Centrali Rischi?</h2>
-    <p>La visura è un documento ufficiale che contiene tutte le informazioni registrate sul tuo profilo creditizio. Questo documento è fondamentale per capire come le banche e le finanziarie vedono la tua affidabilità.</p>
-
-    <h2>Come possiamo aiutarti</h2>
+    <h2>Cosa sono le Centrali Rischi?</h2>
+    <p>Le <strong>Centrali Rischi</strong> sono database che raccolgono informazioni sulla tua affidabilità creditizia, accessibili a banche e finanziarie. Esistono due tipologie:</p>
     <ul>
-        <li>Richiesta visura aggiornata da tutte le centrali rischi</li>
-        <li>Analisi completa della tua situazione creditizia</li>
-        <li>Consulenza per migliorare il tuo punteggio e cancellare segnalazioni errate</li>
+      <li><strong>Pubbliche</strong>: come la <strong>Centrale Rischi Banca d’Italia</strong>, nata nel 1962.</li>
+      <li><strong>Private</strong>: come <strong>CRIF</strong>, <strong>CTC</strong> ed <strong>Experian</strong>.</li>
     </ul>
 
-    <p>Per maggiori informazioni, contattaci al Numero Verde <strong>800 422 202</strong>.</p>
-</div>
+    <h2>Perché le banche rifiutano un finanziamento?</h2>
+    <ol>
+      <li>Reddito insufficiente o non dimostrabile.</li>
+      <li>Troppi debiti o finanziamenti in corso.</li>
+      <li>Segnalazioni negative in una o più centrali rischi.</li>
+    </ol>
 
-<!-- FOOTER -->
-<footer>
-    <img src="/assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Footer">
-    <p>© 2025 QUINTA DIMENSIONE srls</p>
-    <p>
-        <a href="/contatti">Contatti</a> |
-        <a href="/privacy-policy">Privacy Policy</a> |
-        <a href="/termini-condizioni">Termini e Condizioni</a>
-    </p>
-    <p>Via Padania Industriale 1, 31027 Spresiano (TV) - P. IVA e C.F. 05282450260</p>
-    <p>Telefono e WhatsApp: +39 352 002 0306 - Numero Verde: 800 422 202</p>
-</footer>
+    <h2>Cos’è una Visura Centrale Rischi?</h2>
+    <p>È un documento che riporta eventuali segnalazioni o iscrizioni a tuo nome, presenti nei principali archivi creditizi. Serve a controllare la tua situazione finanziaria e a tutelare banche e creditori.</p>
 
-<!-- COOKIE BANNER -->
-<div id="cookie-banner">
-    Utilizziamo cookie per migliorare la tua esperienza. Puoi accettare, rifiutare o personalizzare le preferenze in base alle normative GDPR.
-    <br>
-    <button onclick="acceptAllCookies()">ACCETTO</button>
-    <button onclick="rejectAllCookies()">RIFIUTO</button>
-    <button onclick="togglePreferences()">ACCETTO SELEZIONATI</button>
+    <h2>Differenza tra Visura CRIF e Visura Centrale Rischi Banca d’Italia</h2>
+    <h3>Visura CRIF® (privata):</h3>
+    <ul>
+      <li>Riporta anche ritardi su piccoli importi.</li>
+      <li>Mostra richieste di prestito, finanziamenti attivi, regolarità pagamenti, fidi e carte di credito.</li>
+    </ul>
+    <h3>Centrale Rischi Banca d’Italia (pubblica):</h3>
+    <ul>
+      <li>Registra solo esposizioni sopra i <strong>30.000€</strong>.</li>
+    </ul>
 
-    <div id="cookie-preferences">
-        <h4>Preferenze Cookie</h4>
-        <label><input type="checkbox" checked disabled> Necessari (sempre attivi)</label><br>
-        <label><input type="checkbox" id="statsCookies"> Statistiche</label><br>
-        <label><input type="checkbox" id="marketingCookies"> Marketing</label><br>
-        <button onclick="savePreferences()">Salva Preferenze</button>
+    <h2>Costo Visura Centrale Rischi Banca d’Italia</h2>
+    <p>Richiedibile <strong>gratis</strong> online o presso le filiali della Banca d’Italia.</p>
+
+    <h2>Cos’è una Visura CRIF?</h2>
+    <p>Contiene i dati presenti in <strong>EURISC</strong>: insoluti, ritardi, affidamenti e aperture di credito. Il rilascio è a pagamento e i tempi di consegna sono di circa <strong>10 giorni lavorativi</strong> se la pratica è completa.</p>
+
+    <h2>Richiesta per conto di terzi</h2>
+    <p>Puoi richiedere la visura CRIF di un’altra persona solo con:</p>
+    <ul>
+      <li>Documento di identità e codice fiscale</li>
+      <li>Eventuale delega firmata</li>
+    </ul>
+
+    <h2>Cos’è una Visura Experian?</h2>
+    <p>Mostra dati creditizi su carte di credito, mutui, prestiti, contratti di utenze, leasing e assicurazioni.</p>
+
+    <h2>Cos’è una Visura CTC?</h2>
+    <p>Archivio con informazioni su fidi, anticipi fatture, mutui, prestiti e carte di credito.</p>
+
+    <h2>A cosa serve la Visura Protesti?</h2>
+    <p>Documento della Camera di Commercio che indica protesti su assegni o cambiali. Scadono automaticamente dopo 5 anni.</p>
+
+    <h2>Cos’è la Visura CAI?</h2>
+    <p>Archivio che segnala assegni e carte revocati per uso irregolare. Serve a prevenire frodi e abusi.</p>
+
+    <h2>Dopo quanto tempo si viene cancellati dal CRIF?</h2>
+    <p>Entro massimo <strong>5 anni</strong> dalla data di estinzione del prestito. Se la segnalazione rimane oltre il termine, bisogna richiedere la cancellazione, meglio se tramite esperti.</p>
+
+    <h2>Cosa fare se CRIF non cancella la segnalazione?</h2>
+    <p>CRIF non può eliminare dati senza il via libera della banca segnalante. Un’agenzia specializzata può intervenire per richiederne la rimozione.</p>
+
+    <div class="cta">
+      <a class="whatsapp-btn" href="https://wa.me/363520020306?text=Ciao,%20vorrei%20ricevere%20maggiori%20informazioni%20per%20il%20mio%20stato%20creditizio">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+        Contatta su WhatsApp
+      </a>
     </div>
-</div>
+    <!-- ======= /TESTO ARTICOLO ======= -->
+  </main>
 
-<script>
-function acceptAllCookies() {
-    document.getElementById('cookie-banner').style.display = 'none';
-}
-function rejectAllCookies() {
-    document.getElementById('cookie-banner').style.display = 'none';
-}
-function togglePreferences() {
-    let prefs = document.getElementById('cookie-preferences');
-    prefs.style.display = prefs.style.display === 'block' ? 'none' : 'block';
-}
-function savePreferences() {
-    document.getElementById('cookie-banner').style.display = 'none';
-}
-</script>
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-inner">
+      <div class="footer-brand">
+        <a href="/" aria-label="Home">
+          <img src="/crif/assets/images/logo-cancella-segnalazione-crif.png" alt="Cancella Segnalazione CRIF">
+        </a>
+        <div>
+          <div class="copyright">© 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260</div>
+          <div class="copyright">Tutti i diritti riservati.</div>
+        </div>
+      </div>
+      <nav>
+        <a href="/contatti.html">Contatti</a>
+        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="/termini-condizioni.html">Termini e Condizioni</a>
+      </nav>
+    </div>
+  </footer>
 
+  <!-- COOKIE BANNER (pulsanti neri + preferenze) -->
+  <div id="cookie-banner">
+    <p>Utilizziamo cookie per migliorare la tua esperienza. Puoi accettare, rifiutare o personalizzare le preferenze in base al GDPR.</p>
+    <div class="cookie-actions">
+      <button class="cookie-btn" onclick="acceptCookies()">ACCETTO</button>
+      <button class="cookie-btn" onclick="rejectCookies()">RIFIUTO</button>
+      <button class="cookie-btn" onclick="togglePrefs()">ACCETTO SELEZIONATI</button>
+    </div>
+    <div class="prefs" id="cookie-prefs" style="display:none">
+      <h4>Preferenze Cookie</h4>
+      <label><input type="checkbox" checked disabled> Necessari (sempre attivi)</label>
+      <label><input type="checkbox" id="pref-stats"> Statistiche</label>
+      <label><input type="checkbox" id="pref-mkt"> Marketing</label>
+      <button class="cookie-btn" onclick="savePrefs()">Salva Preferenze</button>
+    </div>
+  </div>
+
+  <script>
+    // Mostra il banner solo se l'utente non ha ancora scelto
+    (function(){
+      try{
+        if(!localStorage.getItem('cookieConsent')){
+          document.getElementById('cookie-banner').style.display='block';
+        }
+      }catch(e){}
+    })();
+
+    function acceptCookies(){
+      try{ localStorage.setItem('cookieConsent','all'); }catch(e){}
+      document.getElementById('cookie-banner').style.display='none';
+    }
+    function rejectCookies(){
+      try{ localStorage.setItem('cookieConsent','none'); }catch(e){}
+      document.getElementById('cookie-banner').style.display='none';
+    }
+    function togglePrefs(){
+      const el=document.getElementById('cookie-prefs');
+      el.style.display = (el.style.display==='none' || !el.style.display) ? 'block' : 'none';
+    }
+    function savePrefs(){
+      const prefs={
+        statistics: document.getElementById('pref-stats').checked,
+        marketing: document.getElementById('pref-mkt').checked
+      };
+      try{ localStorage.setItem('cookieConsent', JSON.stringify(prefs)); }catch(e){}
+      document.getElementById('cookie-banner').style.display='none';
+    }
+  </script>
 </body>
 </html>
