--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <img src="https://via.placeholder.com/300x200" alt="Segnalazione CRIF">
                 <h3>Come cancellare una segnalazione in CRIF</h3>
                 <p>Guida passo-passo per capire come rimuovere una segnalazione negativa e migliorare il punteggio creditizio.</p>
-                <a href="articolo-cancellazione-crif.html">Leggi l'articolo</a>
+                <a href="visure-centrali-rischi">Leggi l'articolo</a>
             </div>
 
             <!-- Altri articoli segnaposto -->
