cancellare-segnalazione-crif.html

--- a/cancellare-segnalazione-crif.html
+++ b/cancellare-segnalazione-crif.html
@@ -309,7 +309,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 - Guida Cancellazione CRIF. Tutti i diritti riservati.</p>
+            <p>&copy; 2025 - CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P: IVA 05282450260. Tutti i diritti riservati.</p>
             <p>Le informazioni contenute in questa pagina hanno carattere informativo e non costituiscono consulenza legale specifica.</p>
         </div>
     </footer>
