--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
                 <h3>Titolo articolo 2</h3>
                 <p>Breve descrizione dell'articolo 2. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="cancellazione-centrale-rischi">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
                 <h3>Titolo articolo 3</h3>
                 <p>Breve descrizione dell'articolo 3. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="cancellare-segnalazione-crif">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
