eclamo-banca-segnalazione-crif.html

--- a/reclamo-banca-segnalazione-crif.html
+++ b/reclamo-banca-segnalazione-crif.html
@@ -586,7 +586,19 @@ Cordiali saluti
             </div>
         </div>
     </main>
-
+    
+<!-- Widget guida -->
+<div style="text-align: center; background-color: #f9f9f9; border: 2px solid #ddd; padding: 20px; border-radius: 12px; max-width: 500px; margin: 30px auto; font-family: Arial, sans-serif;">
+    <p style="font-size: 18px; font-weight: 500; color: #333; margin-bottom: 20px;">
+        Scarica gratis la mini guida con i 5 passi per cancellare la tua segnalazione in CRIF.<br>
+        <strong>Moduli inclusi, strategia testata, risultati visibili.</strong>
+    </p>
+    <a href="https://cancellasegnalazione.it" target="_blank" 
+       style="display: inline-block; background-color: #ff4b4b; color: white; text-decoration: none; padding: 14px 25px; font-size: 18px; border-radius: 8px; font-weight: bold; transition: background-color 0.3s ease;">
+        📥 Scarica guida gratuita
+    </a>
+</div>
+    
     <footer>
         <div class="container">
             <div class="footer-content">
