--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
                 <h3>Titolo articolo 4</h3>
                 <p>Breve descrizione dell'articolo 4. Approfondisci il tema cliccando sul link.</p>
-                <a href="#">Leggi l'articolo</a>
+                <a href="reclamo-banca-segnalazione-crif">Leggi l'articolo</a>
             </div>
             <div class="article-card">
                 <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
