cancellazione-centrale-rischi.html

--- a/cancellazione-centrale-rischi.html
+++ b/cancellazione-centrale-rischi.html
@@ -459,13 +459,23 @@
             </div>
         </div>
     </main>
-
+<!-- Widget guida -->
+<div style="text-align: center; background-color: #f9f9f9; border: 2px solid #ddd; padding: 20px; border-radius: 12px; max-width: 500px; margin: 30px auto; font-family: Arial, sans-serif;">
+    <p style="font-size: 18px; font-weight: 500; color: #333; margin-bottom: 20px;">
+        Scarica gratis la mini guida con i 5 passi per cancellare la tua segnalazione in CRIF.<br>
+        <strong>Moduli inclusi, strategia testata, risultati visibili.</strong>
+    </p>
+    <a href="https://cancellasegnalazione.it" target="_blank" 
+       style="display: inline-block; background-color: #ff4b4b; color: white; text-decoration: none; padding: 14px 25px; font-size: 18px; border-radius: 8px; font-weight: bold; transition: background-color 0.3s ease;">
+        📥 Scarica guida gratuita
+    </a>
+</div>
     <footer>
         <div class="container">
             <div class="footer-content">
                 <img src="assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Cancella Segnalazione CRIF" class="logo">
                 <div>
-                    <p>&copy; 2024 - Guida Cancellazione Centrale Rischi. Tutti i diritti riservati.</p>
+                    <p>&copy; 2025 - Guida Cancellazione Centrale Rischi. Tutti i diritti riservati.</p>
                     <p>Le informazioni contenute in questa pagina hanno carattere informativo e non costituiscono consulenza legale specifica.</p>
                 </div>
             </div>
