--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <!-- Altri articoli segnaposto -->
             <div class="article-card">
                 <img src="https://via.placeholder.com/300x200" alt="Titolo articolo">
-                <h3>Titolo articolo 2</h3>
-                <p>Breve descrizione dell'articolo 2. Approfondisci il tema cliccando sul link.</p>
+                <h3>Come Ottenere la Cancellazione dalla Centrale Rischi</h3>
+                <p>Centrale Rischi della Banca d'Italia raccoglie informazioni sui rapporti creditizi di imprese e privati.</p>
                 <a href="cancellazione-centrale-rischi">Leggi l'articolo</a>
             </div>
             <div class="article-card">
