da-cattivo-pagatore-cliente-affidabile.html

--- a/da-cattivo-pagatore-cliente-affidabile.html
+++ b/da-cattivo-pagatore-cliente-affidabile.html
@@ -405,13 +405,15 @@
 
     <main>
         <div class="container">
-             <!-- Widget immagine articolo -->
+            <!-- Widget immagine articolo -->
             <div style="background-color: #ffffff; border: 2px solid #e0e0e0; border-radius: 15px; padding: 25px; margin: 30px auto; max-width: 700px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.08);">
                 <img src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png" 
                      alt="Da cattivo pagatore a cliente affidabile" 
                      style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
             </div>
         </div>
+        
+        <div class="container">
             <div class="content-widget">
                 <h2>La Verità Nascosta sulla Riabilitazione Creditizia</h2>
                 
@@ -626,7 +628,7 @@
             <div class="footer-content">
                 <img src="assets/images/logo-cancella-segnalazione-crif.png" alt="Logo Footer" class="logo">
                 <div class="header-text">
-                    <p>&copy; 2024 Cancella Segnalazione CRIF. Tutti i diritti riservati.</p>
+                    <p>&copy; 2025 Cancella Segnalazione CRIF. Tutti i diritti riservati.</p>
                     <p>Riabilitazione creditizia professionale e strategica</p>
                 </div>
             </div>
