da-cattivo-pagatore-cliente-affidabile.html

--- a/da-cattivo-pagatore-cliente-affidabile.html
+++ b/da-cattivo-pagatore-cliente-affidabile.html
@@ -609,7 +609,7 @@
                 <strong>Moduli inclusi, strategia testata, risultati visibili.</strong>
             </p>
             <a href="https://cancellasegnalazione.it" target="_blank" 
-               style="display: inline-block; background-color: #ff4b4b; color: white; text-decoration: none; padding: 14px 25px; font-size: 18px; border-radius: 8px; font-weight: bold; transition: background-color 0.3s ease;">
+               style="display: inline-block; background-color: #ffde59; color: white; text-decoration: none; padding: 14px 25px; font-size: 18px; border-radius: 8px; font-weight: bold; transition: background-color 0.3s ease;">
                 📥 Scarica guida gratuita
             </a>
         </div>
