da-cattivo-pagatore-cliente-affidabile.html

--- a/da-cattivo-pagatore-cliente-affidabile.html
+++ b/da-cattivo-pagatore-cliente-affidabile.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Da Cattivo Pagatore a Cliente Affidabile: La Strategia che Nessuno Ti Spiega 2024</title>
+    <title>Da Cattivo Pagatore a Cliente Affidabile: La Strategia che Nessuno Ti Spiega</title>
     <meta name="description" content="Scopri la strategia definitiva per trasformarsi da cattivo pagatore a cliente affidabile. Guida completa con tecniche segrete per riabilitare il tuo profilo creditizio e ottenere nuovi finanziamenti.">
     <meta name="keywords" content="cattivo pagatore, riabilitazione creditizia, come non essere cattivo pagatore, migliorare profilo creditizio, segnalazioni negative, recupero credibilità finanziaria">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Esperti Riabilitazione Creditizia">
-    <link rel="canonical" href="https://example.com/cattivo-pagatore-strategia">
+    <link rel="canonical" href="https://cancellasegnalazione.com/cattivo-pagatore-strategia">
     
     <!-- Open Graph -->
-    <meta property="og:title" content="Da Cattivo Pagatore a Cliente Affidabile: La Strategia che Nessuno Ti Spiega 2024">
+    <meta property="og:title" content="Da Cattivo Pagatore a Cliente Affidabile: La Strategia che Nessuno Ti Spiega">
     <meta property="og:description" content="La strategia segreta per trasformarsi da cattivo pagatore a cliente affidabile con tecniche professionali e risultati garantiti.">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://example.com/cattivo-pagatore-strategia">
+    <meta property="og:url" content="https://cancellasegnalazione.com/cattivo-pagatore-strategia">
     
     <!-- Schema.org JSON-LD -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "Da Cattivo Pagatore a Cliente Affidabile: La Strategia che Nessuno Ti Spiega 2024",
+        "headline": "Da Cattivo Pagatore a Cliente Affidabile: La Strategia che Nessuno Ti Spiega",
         "description": "Scopri la strategia definitiva per trasformarsi da cattivo pagatore a cliente affidabile con tecniche segrete e professionali.",
         "author": {
             "@type": "Organization",
@@ -31,7 +31,7 @@
         "dateModified": "2024-08-14",
         "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https://example.com/cattivo-pagatore-strategia"
+            "@id": "https://cancellasegnalazione.com/cattivo-pagatore-strategia"
         }
     }
     </script>
