--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
 
         <!-- CTA WhatsApp -->
-        <a class="cta-whatsapp" href="https://wa.me/363520020306?text=Ciao,%20vorrei%20ricevere%20maggiori%20informazioni%20per%20il%20mio%20stato%20creditizio">
+        <a class="cta-whatsapp" href="https://wa.me/393520020306?text=Ciao,%20vorrei%20ricevere%20maggiori%20informazioni%20per%20il%20mio%20stato%20creditizio">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
             Contatta su WhatsApp
         </a>
@@ -210,14 +210,14 @@
         <img src="assets/images/logo-cancella-segnalazione-crif.png" 
              alt="Cancella Segnalazione CRIF" 
              style="height: 50px; margin-right: 15px;">
-        <span>© 2025 QUINTA DIMENSIONE srls</span>
+        <span>© 2025 CancellaSegnalazione è un brand di QUINTA DIMENSIONE srls - P. IVA 05282450260</span>
     </div>
 
     <!-- Link di navigazione -->
     <nav>
-        <a href="contatti.html" style="color: white; margin: 0 10px; text-decoration: none;">Contatti</a>
-        <a href="privacy-policy.html" style="color: white; margin: 0 10px; text-decoration: none;">Privacy Policy</a>
-        <a href="termini-condizioni.html" style="color: white; margin: 0 10px; text-decoration: none;">Termini e Condizioni</a>
+        <a href="contatti" style="color: white; margin: 0 10px; text-decoration: none;">Contatti</a>
+        <a href="privacy-policy" style="color: white; margin: 0 10px; text-decoration: none;">Privacy Policy</a>
+        <a href="termini-condizioni" style="color: white; margin: 0 10px; text-decoration: none;">Termini e Condizioni</a>
     </nav>
 </footer>
 <!-- Banner Cookie GDPR -->
