--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
             
             <!-- Primo articolo (già creato) -->
             <div class="article-card">
-                <img src="https://via.placeholder.com/300x200" alt="Segnalazione CRIF">
+                <img
+  src="assets/images/posts/da-cattivo-pagatore-a-cliente-affidabile.png"
+  alt="Da cattivo pagatore a cliente affidabile - guida passo passo"
+  width="300" height="200"
+  loading="lazy" decoding="async">
                 <h3>Come cancellare una segnalazione in CRIF</h3>
                 <p>Guida passo-passo per capire come rimuovere una segnalazione negativa e migliorare il punteggio creditizio.</p>
                 <a href="visure-centrali-rischi">Leggi l'articolo</a>
